<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MJ PDF Reader</string>
    <string name="pick_file">Pick File</string>
    <string name="toast_pick_file_error">Unable to pick file! Check your file manager on your phone.</string>
    <string name="toast_http_code_error">Remote server responded with an error.</string>
    <string name="toast_generic_download_error">We couldn\'t download this file for some reason.</string>
    <string name="toast_ssl_error">Secure connection failed.</string>
    <string name="saved_to_download">File saved to Download folder.</string>
    <string name="save_to_download_failed">Couldn\'t save file to Download folder.</string>
    <string name="action_about">About</string>
    <string name="version">Version</string>
    <string name="intro">Replay Intro</string>
    <string name="author" translatable="false">Mudlej</string>
    <string name="email">Email (Mudlej)</string>
    <string name="description_open">Free of cost and free of restrictions.\nYou are free to read, edit, share and redistribute the app and its source code of the app.</string>
    <string name="title_open">IT IS YOURS</string>
    <string name="title_intro" translatable="false">MJ PDF READER</string>
    <string name="description__intro">A simple PDF Reader</string>
    <string name="myLicense">License</string>
    <string name="privacy">Privacy Policy</string>
    <string name="license" translatable="false">
        MIT License

        Copyright (c) 2022 Mudlej

        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        The above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.

    </string>
    <string name="appChangelog">Features / Change Log</string>
    <string name="ok">Ok</string>
    <string name="title_permission">Storage Permissions</string>
    <string name="description__permission">The app will ask for the storage permission to be able to read / write documents.</string>
    <string name="libs">Open Source Libraries</string>
    <string name="git" translatable="false">Github</string>
    <string name="code">Source Code</string>
    <string name="share_file">Share File</string>
    <string name="print_file">Print File</string>
    <string name="full_screen">Full Screen</string>
    <string name="devnotice">Developer Notice</string>
    <string name="theme_picker">Change Theme</string>
    <string name="app_info">App Info</string>
    <string name="author_info">Author Info</string>
    <string name="contribution">Contributors</string>
    <string name="label_theme_picker">Theme Picker</string>
    <string name="pref_theme_title">Themes</string>
    <string name="pref_theme_summary">Select a pre-installed theme</string>
    <string name="pref_primary_color_title">Primary color</string>
    <string name="pref_primary_color_summary">Displayed most frequently across your app.</string>
    <string name="pref_accent_color_title">Accent color</string>
    <string name="pref_accent_color_summary">Accents select parts of the UI.</string>
    <string name="pref_background_color_title">Background color</string>
    <string name="pref_background_color_summary">The underlying color of the app’s content.</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_colored_navigation_bar_title">Navigation bar color</string>
    <string name="pref_colored_navigation_bar_summary">Apply the primary color to the navigation bar</string>
    <string name="metadata">File Info</string>
    <string name="file_metadata">File Metadata</string>
    <string name="app_settings">App Settings</string>
    <string name="quality">High Quality Rendering</string>
    <string name="settings">Settings</string>
    <string name="alias">Anti-Aliasing</string>
    <string name="scroll">Horizontal Scrolling</string>
    <string name="snap">Page Snap</string>
    <string name="snap_summary">Center the view on the current page after each swipe</string>
    <string name="fling">Page Fling</string>
    <string name="fling_summary">Perform a quick swipe to jump directly to the next page</string>
    <string name="quality_settings">Visual</string>
    <string name="scroll_settings">Scrolling</string>
    <string name="text_extraction">Text Extraction</string>
    <string name="title_activity_settings">Settings</string>
    <string name="buttonLog">CONTINUE</string>
    <string name="show_in_launcher">Show app in launcher</string>
    <string name="show_in_launcher_summary">You may need to restart your launcher for this option to take effect</string>
    <string name="pdf_title">Title</string>
    <string name="pdf_author">Author</string>
    <string name="pdf_creation_date">Creation Date</string>
    <string name="file_opening_error">Error opening the pdf. (storage permission? free space?)</string>
    <string name="protected_pdf">Protected PDF</string>
    <string name="enter_password">Enter the correct password to open the document:</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="dark_pdf">Dark theme for PDF</string>
    <string name="keep_screen_on">Keep the screen on</string>
    <string name="privacy_info">This app does not collect any data.\nThe following permissions are required to provide specific features in the app:\n- <b>Internet</b>: open PDFs through links\n- <b>Storage</b>: open files from storage, save PDFs opened through links</string>
    <string name="app_theme">App Theme</string>
    <string name="switch_theme">Toggle PDF Theme</string>
    <string name="open_another_pdf">Open Another PDF</string>
    <string name="show_pdf_metadata">Metadata</string>
    <string name="close_character">X</string>
    <string name="close">Close</string>
    <string name="exit_fullscreen_button">Exit Fullscreen Button</string>
    <string name="ask_restore_zoom">Restore zoom?</string>
    <string name="rotate_screen">Rotate Screen</string>
    <string name="gitlab">Gitlab</string>
    <string name="mj_pdf_features">MJ PDF Reader Features</string>
    <string name="exit_fullscreen_message">Tapping the screen will show an X button in the top-left corner. Click it to exit full screen.</string>
    <string name="exit_fullscreen_title">To Exit Full Screen</string>
    <string name="exit_fullscreen_positive">Don\'t show again</string>
    <string name="about_app">This is a fork mady by (@mudlej) from PDF Viewer Plus by Gokul Swaminathan (@JavaCafe01).\n\n I added, fixed and modified many things in the app and its core libraries. The new app is significantly different and is called MJ PDF Reader.\n\nCredits to (@Derekelkins) for adding the ability to remember last opened page.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="error_load_file_name">Couldn\'t retrieve file name</string>
    <string name="cannot_load_page">\"Cannot load page \"</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dark_theme_for_app">Let the app follow phone\'s theme</string>
    <string name="app_dark_theme_summary">The app (not the PDF\'s pages) will follow phone\'s theme. This option may cause problems with pdf background colors on some devices.</string>
    <string name="experimental">Experimental</string>
    <string name="caution">Caution</string>
    <string name="app_dark_dialog_message">On some devices, this option may cause black rectangles to show when reading PDFs. If that happens, just turn this option off.</string>
    <string name="restore">Restore</string>
    <string name="no_pdf_in_app">There is no PDF open in the app</string>
    <string name="no_print_manager">Error: Can\'t get PrintManager</string>
    <string name="slow_loading">Slow loading?</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_config">Advanced Configuration</string>
    <string name="part_size_value">PART SIZE value</string>
    <string name="max_zoom_value">MAX ZOOM value</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="page">Page</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="no_bookmarks">This file doesn\'t contain bookmarks</string>
    <string name="additional_options">Additional Options</string>
    <string name="text_mode_experimental">Text Mode (experimental)</string>
    <string name="text_mode_loading">Text Mode (try later, still loading…)</string>
    <string name="search_loading">Search (loading…)</string>
    <string name="left_arrow"><![CDATA[<-]]></string>
    <string name="right_arrow"><![CDATA[->]]></string>
    <string name="search">Search</string>
    <string name="found">found</string>
    <string name="line">line</string>
    <string name="search_experimental">Search (experimental)</string>
    <string name="search_results">Search Results:</string>
    <string name="copied_to_clipboard">Text copied to clipboard</string>
    <string name="copy_all">Copy All</string>
    <string name="increase_font">Increase Font</string>
    <string name="decrease_font">Decrease Font</string>
    <string name="search_input_empty">No input! To see a text version of the PDF, try Text Mode.</string>
    <string name="search_dialog_title">Search (experimental)</string>
    <string name="search_dialog_message">This app tries to extract text from PDF, so it may not be accurate or correct</string>
    <string name="app_still_extracting_text">Try again few seconds later, still extracting the text from the PDF</string>
    <string name="finished_extracting_text">Finished extracting text</string>
    <string name="empty_page">Empty page</string>
    <string name="enter_text_to_search">Enter text to look up</string>
    <string name="this_is_experimental">This is experimental</string>
    <string name="this_is_experimental_message">This feature of the app is still under development and is not stable or fully correct.</string>
    <string name="copy_page_text">Copy Page\'s Text</string>
</resources>