<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="35dp">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/advanced"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/colorDarkOpposite"
        android:textAllCaps="true"/>

    <!-- PartSize -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/part_size_value"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/colorDarkOpposite"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <SeekBar
            android:id="@+id/partSizeSeekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:progressTint="@color/colorDarkOpposite"
            android:thumbTint="@color/colorDarkOpposite"
            android:layout_marginVertical="15dp"
            />
        <TextView
            android:id="@+id/partSizeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- PartSize -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_zoom_value"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/colorDarkOpposite"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <SeekBar
            android:id="@+id/maxZoomSeekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:progressTint="@color/colorDarkOpposite"
            android:thumbTint="@color/colorDarkOpposite"
            android:layout_marginVertical="15dp"
            />
        <TextView
            android:id="@+id/maxZoomText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Apply Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/apply"
        android:textColor="@color/colorBrightOpposite"
        android:backgroundTint="@color/colorDarkOpposite"/>
    <!-- Reset and Cancel Buttons -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/colorBrightOpposite"
            android:backgroundTint="@color/colorDarkOpposite"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorBrightOpposite"
            android:backgroundTint="@color/colorDarkOpposite"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>