<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ MJ PDF Reader
    ~ Copyright (C) 2022 Mudlej
    ~
    ~ This program is free software: you can redistribute it and/or modify
    ~ it under the terms of the GNU General Public License as published by
    ~ the Free Software Foundation, either version 3 of the License, or
    ~ (at your option) any later version.
    ~ This program is distributed in the hope that it will be useful,
    ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
    ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    ~ GNU General Public License for more details.
    ~ You should have received a copy of the GNU General Public License
    ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
    ~
    ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~ This code was previously licensed under
    ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~
    ~ MIT License
    ~ Copyright (c) 2018 Gokul Swaminathan
    ~ Copyright (c) 2022 Mudlej
    ~
    ~ Permission is hereby granted, free of charge, to any person obtaining a copy
    ~ of this software and associated documentation files (the "Software"), to deal
    ~ in the Software without restriction, including without limitation the rights
    ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    ~ copies of the Software, and to permit persons to whom the Software is
    ~ furnished to do so, subject to the following conditions:
    ~ The above copyright notice and this permission notice shall be included in all
    ~ copies or substantial portions of the Software.
    ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    ~ SOFTWARE.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_in_text_mode"
        android:orderInCategory="1"
        android:title="@string/search_experimental"
        android:icon="@drawable/search_icon"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:visible="false"/>

    <item
        android:id="@+id/increase_font"
        android:orderInCategory="2"
        android:title="@string/increase_font"
        app:showAsAction="never" />

    <item
        android:id="@+id/decrease_font"
        android:orderInCategory="3"
        android:title="@string/decrease_font"
        app:showAsAction="never" />

</menu>