<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ MJ PDF Reader
    ~ Copyright (C) 2022 Mudlej
    ~
    ~ This program is free software: you can redistribute it and/or modify
    ~ it under the terms of the GNU General Public License as published by
    ~ the Free Software Foundation, either version 3 of the License, or
    ~ (at your option) any later version.
    ~ This program is distributed in the hope that it will be useful,
    ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
    ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    ~ GNU General Public License for more details.
    ~ You should have received a copy of the GNU General Public License
    ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
    ~
    ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~ This code was previously licensed under
    ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~
    ~ MIT License
    ~ Copyright (c) 2018 Gokul Swaminathan
    ~ Copyright (c) 2022 Mudlej
    ~
    ~ Permission is hereby granted, free of charge, to any person obtaining a copy
    ~ of this software and associated documentation files (the "Software"), to deal
    ~ in the Software without restriction, including without limitation the rights
    ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    ~ copies of the Software, and to permit persons to whom the Software is
    ~ furnished to do so, subject to the following conditions:
    ~ The above copyright notice and this permission notice shall be included in all
    ~ copies or substantial portions of the Software.
    ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    ~ SOFTWARE.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gitlab.mudlej.MjPdfReader.ui.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pickFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_file"
        android:backgroundTint="@color/dark"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/exitFullScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/exitFullScreenImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/close_icon"
                android:background="@drawable/button_background"
                android:shadowColor="#ffffff"
                android:shadowDx="1.5"
                android:shadowDy="1.5"
                android:shadowRadius="3"
                android:contentDescription="@string/exit_fullscreen_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rotateScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/rotateScreenImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_screen_rotate"
                android:background="@drawable/button_background"
                android:shadowColor="#ffffff"
                android:shadowDx="1.5"
                android:shadowDy="1.5"
                android:shadowRadius="3"
                android:contentDescription="@string/rotate_screen" />
        </LinearLayout>
    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/pageLengthText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="26dp"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:text="124/350"-->
<!--        android:textSize="32sp"-->
<!--        android:textColor="@color/colorPrimary"-->
<!--        android:textAlignment="center"-->
<!--        android:shadowColor="@color/white"-->
<!--        android:shadowDx="1.5"-->
<!--        android:shadowDy="1.3"-->
<!--        android:shadowRadius="3"-->
<!--        tools:ignore="RtlCompat"-->
<!--        android:visibility="visible"/>-->


    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomNavigation"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:minHeight="?android:attr/actionBarSize"-->
<!--        app:itemIconTint="?menuIconColor"-->
<!--        app:itemTextColor="?menuIconColor"-->
<!--        app:labelVisibilityMode="unlabeled"-->
<!--        app:menu="@menu/fab_menu" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>
